Fix gap between icon and text changing for legacy icons during collapse

--- a/client/src/components/Sidebar/menu/MenuItem.scss
+++ b/client/src/components/Sidebar/menu/MenuItem.scss
@@ -6,7 +6,7 @@
     &__link {
         @include transition(border-color $menu-transition-duration ease, background-color $menu-transition-duration ease);
         position: relative;
-        display: flex;
+        display: block;
         white-space: nowrap;
         border-left: 3px solid transparent;
 
@@ -43,6 +43,13 @@
             top: 0.5em;
             margin-top: 0;
         }
+
+        // Disable icon margin, this is instead applied to the left of the .menuitem-label
+        // This is because SVG icons and legacy icons apply this margin differently,
+        // we could remove this override when we remove legacy icons
+        .icon {
+            margin-right: 0 !important;
+        }
     }
 
     &--in-sub-menu {
@@ -69,6 +76,7 @@
 
 .menuitem-label {
     @include transition(opacity $menu-transition-duration ease);
+    margin-left: .5em;
 }
 
 .menuitem-tooltip {
